--- a/inventories/multi-hosts/hosts.yml
+++ b/inventories/multi-hosts/hosts.yml
@@ -4,6 +4,7 @@ all:
     installserver:
       hosts:
         # Put only one host here this is the one used for tenant load script
+        # It could be one of the appservers or webservers to avoid unzip of SWEAGLE package again
         localhost:
           ansible_connection: local
           #ansible_user: sweagle
@@ -26,10 +27,10 @@ all:
 
     indexservers:
       hosts:
-        192.168.1.56:
-          ansible_user: sweagle
-          ansible_password: sweagle
-          ansible_become_pass: sweagle
+        192.168.1.50:
+          ansible_user: root
+          ansible_password: root
+          ansible_become_pass: root
 
     dbservers:
       hosts:
