--- a/roles/mysql/default/main.yml
+++ b/roles/mysql/default/main.yml
@@ -1,6 +1,14 @@
 ---
 # Default values for MYSQL parameters
 mysql_port: 3306
+mysql_bind_address: "127.0.0.1"
+
+#mysql_data_dir: "/var/lib/mysql"
+#mysql_log_dir: "/var/log/mysql"
+#mysql_log_error: "{{ mysql_log_dir}}/error.log"
+
+mysql_system_group: "mysql"
+mysql_system_user: "mysql"
 
 mysql_root_user: root
 mysql_root_password: root
