--- a/roles/mysql/vars/Debian.yml
+++ b/roles/mysql/vars/Debian.yml
@@ -3,3 +3,5 @@ mysql_daemon: mysql
 mysql_packages: ['mysql-server', 'mysql-common', 'python-mysqldb']
 
 mysql_config_dir: "/etc/mysql"
+#mysql_log_dir: "/var/log/mysql"
+#mysql_log_error: "{{ mysql_log_dir}}/error.log"
