--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,5 +1,17 @@
 ---
 # Install NGINX
+- name: Check if nginx repository is present
+  shell: rpm -qa | grep nginx-release
+  register: nginx_repo
+  ignore_errors: True
+  when: not force_local_installation and ansible_os_family == 'RedHat'
+  tags: nginx
+
+- name: Add repository nginx-release (CentOS6/CentOS7)
+  yum: name="http://nginx.org/packages/centos/{{ansible_distribution_major_version}}/noarch/RPMS/nginx-release-centos-{{ansible_distribution_major_version}}-0.el{{ansible_distribution_major_version}}.ngx.noarch.rpm"
+  when: nginx_repo|failed
+  tags: nginx
+
 - name: Install nginx from repo
   package:
     name: nginx
@@ -33,12 +45,12 @@
     dest: "/etc/nginx/conf.d/default.conf"
   become: true
   tags: nginx
+  notify: Restart nginx
 
-- name: Check nginx service is running
-  service:
-    name: nginx
-    enabled: yes
-    state: restarted
-  become: true
-  become_user: root
-  tags: nginx
+- name: Deploy SWEAGLE zip
+  include_tasks: deploy-sweagle-zip.yml
+  tags: [ sweagle, sweagle-web ]
+
+- name: Configure SWEAGLE website
+  include_tasks: configure-sweagle.yml
+  tags: [ sweagle, sweagle-web ]
