--- a/roles/sweagle/default/main.yml
+++ b/roles/sweagle/default/main.yml
@@ -4,7 +4,7 @@ sweagle_system_user: sweagle
 sweagle_system_group: sweagle
 
 sweagle_version:
-sweagle_installation_folder: /opt/SWEAGLE/core
+sweagle_installation_folder: /opt/sweagle
 sweagle_create_services: true
 sweagle_license_key:
 
