--- a/roles/sweagle/tasks/configure-sweagle-taskrunner.yml
+++ b/roles/sweagle/tasks/configure-sweagle-taskrunner.yml
@@ -1,5 +1,5 @@
 ---
-- name: configure SWEAGLE taskrunner application.yml
+- name: Configure SWEAGLE taskrunner application.yml
   template:
     src: "{{ sweagle_version }}/taskrunner-application.yml.j2"
     dest: "{{ sweagle_installation_folder }}/bin/taskRunner/application.yml"
@@ -17,5 +17,10 @@
     state: started
     enabled: yes
   become: true
+  when: sweagle_create_services
+  tags: [ sweagle, sweagle-taskrunner ]
+
+- name: Wait for taskrunner to startup
+  wait_for: host="{{ inventory_hostname }}" port={{ sweagle_taskrunner_port }} delay=15 connect_timeout=5 timeout=60
   when: sweagle_create_services
   tags: [ sweagle, sweagle-taskrunner ]
