--- a/inventories/multi-hosts/hosts.yml
+++ b/inventories/multi-hosts/hosts.yml
@@ -13,7 +13,7 @@ all:
 
     webservers:
       hosts:
-        192.168.1.50:
+        192.168.1.56:
           ansible_user: root
           ansible_password: root
           ansible_become_pass: root
@@ -27,14 +27,29 @@ all:
 
     indexservers:
       hosts:
-        192.168.1.50:
-          ansible_user: root
-          ansible_password: root
-          ansible_become_pass: root
-
-    dbservers:
-      hosts:
         192.168.1.56:
           ansible_user: sweagle
           ansible_password: sweagle
           ansible_become_pass: sweagle
+
+    dbservers:
+## If you want to install all DBs on same host, just uncomment hosts and comment children
+## Don't forget to check that your play targets dbservers and not mysql + mongodb
+#      hosts:
+#        192.168.1.56:
+#          ansible_user: sweagle
+#          ansible_password: sweagle
+#          ansible_become_pass: sweagle
+      children:
+        mysql:
+          hosts:
+            192.168.1.50:
+              ansible_user: root
+              ansible_password: root
+              ansible_become_pass: root
+        mongodb:
+          hosts:
+            192.168.1.56:
+              ansible_user: sweagle
+              ansible_password: sweagle
+              ansible_become_pass: sweagle
