--- a/group_vars/dbservers.yml
+++ b/group_vars/dbservers.yml
@@ -6,7 +6,7 @@
 mysql_port: "{{ sweagle_mysql_port }}"
 ## default 127.0.0.1, only one or all (0.0.0.0) bind address are allowed for MySQL
 mysql_bind_address: "0.0.0.0"
-#mysql_bind_address: "{{ sweagle_mysql_bindip }}"
+#mysql_bind_address: "{{ sweagle_mysql_host }}"
 
 # MySQL root user and password
 mysql_root_user: root
@@ -26,7 +26,7 @@ mysql_system_user: "mysql"
 mongodb_version: "3.6"
 ## comma seperated list for other mongodb bind IPs
 ## see https://www.mkyong.com/mongodb/mongodb-allow-remote-access/
-mongodb_net_bindip: "127.0.0.1,{% for host in groups['dbservers'] %}{{ hostvars[host].ansible_default_ipv4.address }}{% if not loop.last %},{% endif %}{% endfor %}"
+mongodb_net_bindip: "127.0.0.1,{% for host in groups['mongodb'] %}{{ hostvars[host].ansible_default_ipv4.address }}{% if not loop.last %},{% endif %}{% endfor %}"
 mongodb_net_port: "{{ sweagle_mongo_port }}"
 mongodb_security_authorization: "disabled"
 
