--- a/inventories/all-in-one/hosts.yml
+++ b/inventories/all-in-one/hosts.yml
@@ -1,12 +1,11 @@
 ---
 all:
-  hosts:
-    localhost
   children:
-
     installserver:
       hosts:
-        localhost
+        localhost:
+          ansible_connection: local
+          #ansible_become_pass: sweagle
 
     webservers:
       children:
@@ -22,4 +21,9 @@ all:
 
     dbservers:
       children:
-        installserver:
+        mysql:
+          children:
+            installserver:
+        mongodb:
+          children:
+            installserver:
