--- a/group_vars/appservers.yml
+++ b/group_vars/appservers.yml
@@ -1,4 +1,6 @@
 ---
+jdk_install_dir: "/opt/jdk"
+
 vault_version: "0.7.2"
 # WARNING: SWEAGLE not compatible with latest vault 1.1.2
 vault_backend: mysql
