--- a/roles/elasticsearch/tasks/java.yml
+++ b/roles/elasticsearch/tasks/java.yml
@@ -12,11 +12,12 @@
 - name: RedHat - Ensure Java is installed
   become: yes
   yum: name={{ java }} state={{java_state}}
-  when: ansible_os_family == 'RedHat'
+  when: ansible_os_family == 'RedHat' and not force_local_installation
   tags: elasticsearch
 
 - name: Get the installed java path
-  shell: "update-alternatives --display java | grep '^/' | awk '{print $1}' | grep 1.8.0 | head -1"
+#  shell: "update-alternatives --display java | grep '^/' | awk '{print $1}' | grep 1.8.0 | head -1"
+  shell: "update-alternatives --display java | grep '^/' | awk '{print $1}' | grep java | head -1"
   become: yes
   register: java_full_path
   failed_when: False
@@ -43,7 +44,7 @@
 - name: Debian - Ensure Java is installed
   become: yes
   apt: name={{ java }} state={{java_state}}
-  when: ansible_os_family == 'Debian'
+  when: ansible_os_family == 'Debian' and not force_local_installation
   tags: elasticsearch
 
 - name: register open_jdk version
