--- a/roles/nginx/tasks/configure-sweagle.yml
+++ b/roles/nginx/tasks/configure-sweagle.yml
@@ -6,33 +6,33 @@
     state: directory
     mode: "0755"
   become: true
-  tags: [ sweagle, sweagle-web ]
+  tags: [ nginx, sweagle, sweagle-web ]
 
 - name: Unzip web package
   unarchive:
     src: "/tmp/{{ sweagle_version }}/full/bin/ui/dist.zip"
     dest: "{{ sweagle_web_root_dir }}"
   become: true
-  tags: [ sweagle, sweagle-web ]
+  tags: [ nginx, sweagle, sweagle-web ]
 
 - name: Deploy SWEAGLE Nginx default conf
   template:
     src: "sweagle-default.conf.j2"
     dest: "/etc/nginx/conf.d/default.conf"
   become: true
-  tags: [ sweagle, sweagle-web ]
+  tags: [ nginx, sweagle, sweagle-web ]
 
 - name: Configure sweagle.conf
   copy:
     src: "sweagle.conf"
     dest: "/etc/nginx/conf.d/sweagle.conf"
   become: true
-  tags: [ sweagle, sweagle-web ]
+  tags: [ nginx, sweagle, sweagle-web ]
 
 - name: Deploy SWEAGLE Nginx conf
   template:
     src: "sweagle-nginx.conf.j2"
     dest: "/etc/nginx/nginx.conf"
   become: true
-  tags: [ sweagle, sweagle-web ]
+  tags: [ nginx, sweagle, sweagle-web ]
   notify: Restart nginx
