--- a/roles/nginx/tasks/deploy-sweagle-zip.yml
+++ b/roles/nginx/tasks/deploy-sweagle-zip.yml
@@ -5,7 +5,7 @@
     update_cache: yes
   become: true
   when: not force_local_installation
-  tags: [ sweagle, sweagle-web ]
+  tags: [ nginx, sweagle, sweagle-web ]
 
 - name: Install unzip from local
   package:
@@ -15,24 +15,24 @@
   with_fileglob:
     - "../../../files/*unzip*.{{ 'deb' if (ansible_os_family == 'Debian') else 'rpm' }}"
   when: force_local_installation
-  tags: [ sweagle, sweagle-web ]
+  tags: [ nginx, sweagle, sweagle-web ]
 
 - name: "Check if SWEAGLE package is in {{ playbook_dir }}/files/sweagle"
   stat:
     path: "{{ playbook_dir }}/files/sweagle/full_{{ sweagle_version}}.zip"
   register: sweagleFile
-  tags: [ sweagle, sweagle-web ]
+  tags: [ nginx, sweagle, sweagle-web ]
 
 - name: Unzip package "full_{{ sweagle_version }}.zip from local
   unarchive:
     src: "../../../files/sweagle/full_{{ sweagle_version}}.zip"
     dest: /tmp
   when: sweagleFile.stat.exists
-  tags: [ sweagle, sweagle-web ]
+  tags: [ nginx, sweagle, sweagle-web ]
 
 - name: Unzip package "full_{{ sweagle_version }}.zip"
   unarchive:
     src: "full_{{ sweagle_version}}.zip"
     dest: /tmp
   when: not sweagleFile.stat.exists
-  tags: [ sweagle, sweagle-web ]
+  tags: [ nginx, sweagle, sweagle-web ]
