handle case when there is no default ip

--- a/group_vars/dbservers.yml
+++ b/group_vars/dbservers.yml
@@ -26,7 +26,7 @@ mysql_system_user: "mysql"
 mongodb_version: "3.6"
 ## comma seperated list for other mongodb bind IPs
 ## see https://www.mkyong.com/mongodb/mongodb-allow-remote-access/
-mongodb_net_bindip: "127.0.0.1,{% for host in groups['mongodb'] %}{{ hostvars[host].ansible_default_ipv4.address }}{% if not loop.last %},{% endif %}{% endfor %}"
+mongodb_net_bindip: "127.0.0.1,{% for host in groups['mongodb'] %}{{ hostvars[host].ansible_default_ipv4.address|default(ansible_all_ipv4_addresses[0]) }}{% if not loop.last %},{% endif %}{% endfor %}"
 mongodb_net_port: "{{ sweagle_mongo_port }}"
 mongodb_security_authorization: "disabled"
 
